<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/instrucciones_register" />

    <EditText
        android:id="@+id/editMailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="textPersonName"
        android:hint="@string/edit_correo" />

    <EditText
        android:id="@+id/editPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_contraseña" />

    <Button
        android:id="@+id/buttonLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login" />

</LinearLayout>
